--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,18 @@
         <item name="android:colorBackground">@color/black</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="MyEditTextStyle">
+        <item name="android:background">@color/white</item>
+        <item name="android:paddingLeft">10dp</item>
+    </style>
+
+    <style name="MyButtonStyle">
+        <!--        <item name="android:background">@color/gold_standard</item>-->
+        <item name="android:background">@drawable/rounded_shape</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">28sp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
 
