--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,13 +12,18 @@
         <item name="android:background">@color/white</item>
         <item name="android:paddingLeft">10dp</item>
     </style>
-
     <style name="MyButtonStyle">
         <!--        <item name="android:background">@color/gold_standard</item>-->
         <item name="android:background">@drawable/rounded_shape</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">28sp</item>
         <item name="android:textAllCaps">false</item>
+    </style>
+    <style name="MyDialogStyle" parent="@style/Theme.AppCompat.Dialog">
+        <!--        <item name="android:background">@drawable/dialog_rounded</item>-->
+        <item name="android:background">@color/purple_500</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:windowFrame">@color/transparent</item>
     </style>
 
 </resources>
