--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -12,6 +12,7 @@
         android:layout_height="152dp"
         android:layout_marginTop="44dp"
         android:contentDescription="@string/app_name"
+        android:onClick="onClickImagen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shopTitleLabel"
