--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ShopActivity">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="929dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageButton
         android:id="@+id/imageButton"
         android:layout_width="195dp"
@@ -13,6 +23,7 @@
         android:layout_marginTop="44dp"
         android:contentDescription="@string/app_name"
         android:onClick="onClickImagen"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shopTitleLabel"
@@ -41,7 +52,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
-        android:numeric="decimal"
         android:text="Lat"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -77,7 +87,6 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="24dp"
-        android:numeric="decimal"
         android:text="Lng"
         android:textAlignment="center"
         android:textColor="@color/black"
