--- a/app/src/main/res/layout/activity_franquicia.xml
+++ b/app/src/main/res/layout/activity_franquicia.xml
@@ -7,7 +7,7 @@
     tools:context=".FranquiciaActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/franquicia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Soy una Franquicia"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/franquicia" />
 
     <Button
         android:id="@+id/web"
