--- a/app/src/main/res/layout-land/activity_franquicia.xml
+++ b/app/src/main/res/layout-land/activity_franquicia.xml
@@ -4,11 +4,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="0dp"
+        android:layout_height="929dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/mapa2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="16dp"
         android:onClick="onMapa"
         android:text="Mapa"
@@ -19,8 +29,8 @@
         android:id="@+id/web2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="116dp"
         android:onClick="onWeb"
         android:text="Web"
         app:layout_constraintStart_toEndOf="@+id/descripcion2"
@@ -28,12 +38,12 @@
 
     <TextView
         android:id="@+id/descripcion2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="108dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintHorizontal_bias="0.029"
         app:layout_constraintStart_toEndOf="@+id/logo2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -41,11 +51,13 @@
         android:id="@+id/logo2"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.154"
+        app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tipoFranq2" />
+        app:layout_constraintTop_toBottomOf="@+id/tipoFranq2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/tipoFranq2"
@@ -60,7 +72,7 @@
         android:id="@+id/franquicia2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="52dp"
         android:text="Soy una Franquicia"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
