--- a/app/src/main/res/layout/franquicia_list_main.xml
+++ b/app/src/main/res/layout/franquicia_list_main.xml
@@ -18,14 +18,14 @@
 
     <ListView
         android:id="@+id/simpleListView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_width="395dp"
+        android:layout_height="341dp"
+        android:layout_marginTop="60dp"
         android:divider="@color/material_blue_grey_800"
         android:dividerHeight="1dp"
         android:footerDividersEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
