--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textColor">@color/white</item>
     </style>
     <style name="MyEditTextStyle">
-        <item name="android:background">@color/white</item>
+        <item name="android:background">@color/grey_200</item>
         <item name="android:paddingLeft">10dp</item>
     </style>
     <style name="MyButtonStyle">
