--- a/app/src/main/res/layout-land/activity_franquicia.xml
+++ b/app/src/main/res/layout-land/activity_franquicia.xml
@@ -31,12 +31,11 @@
         style="@style/MyButtonStyle"
         android:layout_width="105dp"
         android:layout_height="60dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginTop="32dp"
         android:onClick="onMapa"
         android:text="Mapa"
-        app:layout_constraintBottom_toBottomOf="@+id/descripcion2"
-        app:layout_constraintStart_toEndOf="@+id/descripcion2" />
+        app:layout_constraintStart_toStartOf="@+id/web2"
+        app:layout_constraintTop_toBottomOf="@+id/web2" />
 
     <Button
         android:id="@+id/web2"
@@ -44,52 +43,52 @@
         android:layout_width="105dp"
         android:layout_height="60dp"
         android:layout_marginStart="56dp"
-        android:layout_marginTop="4dp"
         android:onClick="onWeb"
         android:text="Web"
         app:layout_constraintStart_toEndOf="@+id/descripcion2"
-        app:layout_constraintTop_toTopOf="@+id/descripcion2" />
+        app:layout_constraintTop_toTopOf="@+id/logo2" />
 
     <TextView
         android:id="@+id/descripcion2"
         android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_height="157dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:textColor="@color/white"
-        android:layout_marginStart="16dp"
-        android:layout_marginBottom="96dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textSize="18sp"
+        app:layout_constraintStart_toEndOf="@+id/logo2"
+        app:layout_constraintTop_toTopOf="@+id/logo2" />
 
     <ImageView
         android:id="@+id/logo2"
         android:layout_width="180dp"
         android:layout_height="180dp"
-        android:layout_marginEnd="32dp"
-        app:layout_constraintEnd_toStartOf="@+id/descripcion2"
-        app:layout_constraintTop_toTopOf="@+id/descripcion2" />
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tipoFranq2" />
 
     <TextView
         android:id="@+id/tipoFranq2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="285dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="8dp"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/franquicia2"
         app:layout_constraintTop_toBottomOf="@+id/franquicia2" />
 
     <TextView
         android:id="@+id/franquicia2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="68dp"
         android:text="Soy una Franquicia"
-        app:layout_constraintBottom_toTopOf="@+id/logo2"
-        app:layout_constraintEnd_toEndOf="@+id/logo2"
-        app:layout_constraintHorizontal_bias="0.752"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
