--- a/app/src/main/res/layout/activity_franquicia.xml
+++ b/app/src/main/res/layout/activity_franquicia.xml
@@ -31,11 +31,13 @@
         android:id="@+id/franquicia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="76dp"
         android:text="Soy una Franquicia"
         android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,12 +53,13 @@
 
     <TextView
         android:id="@+id/descripcion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_marginStart="16dp"
+        android:layout_width="374dp"
+        android:layout_height="223dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
@@ -65,8 +68,9 @@
         android:id="@+id/tipoFranq"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
         android:layout_marginTop="8dp"
+        android:textColor="@color/white"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +82,7 @@
         android:layout_width="105dp"
         android:layout_height="60dp"
         android:layout_marginStart="76dp"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="60dp"
         android:onClick="onWeb"
         android:text="Web"
         app:layout_constraintBottom_toBottomOf="parent"
