Votos controlados, solo queda el inicio de los votos

--- a/app/src/main/res/layout/activity_shop.xml
+++ b/app/src/main/res/layout/activity_shop.xml
@@ -134,9 +134,10 @@
         android:layout_marginEnd="152dp"
         android:layout_marginBottom="21dp"
         android:background="@drawable/rounded_shape"
-        android:backgroundTint="#5604AA09"
+        android:backgroundTint="#5904AA09"
         android:contentDescription="@string/default_web_client_id"
         android:minHeight="48dp"
+        android:onClick="onClickLike"
         android:rotation="90"
         android:rotationX="0"
         android:rotationY="0"
@@ -175,9 +176,10 @@
         android:layout_marginEnd="152dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/rounded_shape"
-        android:backgroundTint="#79F33628"
+        android:backgroundTint="#59F33628"
         android:contentDescription="@string/app_name"
         android:minHeight="48dp"
+        android:onClick="onClickDislike"
         android:rotation="-90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
