--- a/app/src/main/res/layout-land/activity_shop.xml
+++ b/app/src/main/res/layout-land/activity_shop.xml
@@ -151,6 +151,7 @@
         android:backgroundTint="#5604AA09"
         android:contentDescription="@string/default_web_client_id"
         android:minHeight="48dp"
+        android:onClick="onClickLike"
         android:rotation="90"
         android:rotationX="0"
         android:rotationY="0"
@@ -170,6 +171,7 @@
         android:backgroundTint="#79F33628"
         android:contentDescription="@string/app_name"
         android:minHeight="48dp"
+        android:onClick="onClickDislike"
         android:rotation="-90"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
