--- a/app/src/main/res/layout/activity_franquicia.xml
+++ b/app/src/main/res/layout/activity_franquicia.xml
@@ -51,18 +51,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tipoFranq" />
 
-    <TextView
-        android:id="@+id/descripcion"
+    <ScrollView
+        android:id="@+id/scroller"
         android:layout_width="374dp"
         android:layout_height="223dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
-        android:textColor="@color/white"
-        android:textSize="18sp"
+        android:scrollbars="vertical"
+        android:fillViewport="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" >
+
+        <TextView
+            android:id="@+id/descripcion"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+
+    </ScrollView>
 
     <TextView
         android:id="@+id/tipoFranq"
