--- a/app/src/main/res/layout-land/activity_franquicia.xml
+++ b/app/src/main/res/layout-land/activity_franquicia.xml
@@ -62,8 +62,9 @@
             android:id="@+id/descripcion2"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
     </ScrollView>
 
